[gd_scene load_steps=5 format=3 uid="uid://cndbpdu46wvsj"]

[ext_resource type="Script" path="res://Control.gd" id="1_m5ri6"]
[ext_resource type="FontFile" uid="uid://dj5p34ujeqca7" path="res://fonts/variable/JetBrainsMono[wght].ttf" id="2_2yipf"]

[sub_resource type="LabelSettings" id="LabelSettings_610fn"]
font = ExtResource("2_2yipf")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_ocoam"]
font = ExtResource("2_2yipf")
font_size = 13

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m5ri6")

[node name="SelectAServer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 3.5
offset_right = 173.0
offset_bottom = 30.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2yipf")
text = "Select a server:"

[node name="RegionSelect" type="OptionButton" parent="SelectAServer"]
layout_mode = 1
offset_top = 25.0
offset_right = 199.0
offset_bottom = 56.0
item_count = 1
selected = 0
popup/item_0/text = "default (ping based)"
popup/item_0/id = 0

[node name="Curry" type="Label" parent="SelectAServer"]
layout_mode = 1
offset_top = -21.0
offset_right = 96.0
offset_bottom = 2.0
theme_override_fonts/font = ExtResource("2_2yipf")
text = "Currently:"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 247.0
offset_right = 399.0
offset_bottom = 299.0
text = "Write to config"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 34.0
offset_right = 380.0
offset_bottom = 65.0
placeholder_text = "Press Enter after typing! :)"

[node name="InputPath" type="Label" parent="."]
layout_mode = 1
offset_right = 270.0
offset_bottom = 27.0
text = "Input path to R6S config:"
label_settings = SubResource("LabelSettings_610fn")

[node name="Guide" type="Label" parent="InputPath"]
layout_mode = 0
offset_left = 4.0
offset_top = 78.0
offset_right = 376.0
offset_bottom = 134.0
text = "At C:\\Users\\<User>\\Documents\\My Games\\Rainbow Six - Siege\\<UbisoftConnectID>\\GameSettings.ini"
label_settings = SubResource("LabelSettings_ocoam")
autowrap_mode = 2

[node name="ErrorPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -86.0
offset_right = 37.5
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="ErrorPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.345098, 0.278431, 1)
theme_override_fonts/font = ExtResource("2_2yipf")
text = "Error"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
